# network-observability-lab

./: .gitignore  LICENSE  NetObs.md  README.md  ansible.cfg  example.env  example.setup.env  netobs.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer.json/: Dockerfile  devcontainer.json
.devcontainer/batteries-included/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: devcontainer-build.yml
ch03/: bmp.pcap  gnmi_capabilities.py  gnmi_get_state.py  gnmi_subscription.py  ipfix_receiver.py  netmiko_intf.py  opentelemetry_metrics.py  opentelemetry_traces.py  snmp_get.py  snmp_getbulk.py  synthetic_request.py  syslog_receiver_regex.py
chapters/batteries-included/: README.md  docker-compose.yml  event-automation.py  observer.py  rca.py
chapters/batteries-included/alertmanager/: alertmanager.yml
chapters/batteries-included/logstash/: logstash.cfg
chapters/batteries-included/loki/: loki-config.yml
chapters/batteries-included/telegraf/: routing_collector.py  telegraf-02.conf.toml  telegraf.Dockerfile
chapters/batteries-included/webhook/: webhook.Dockerfile
chapters/ch03-completed/: netmiko_intf_parsed.py  restconf_get.py  syslog_receiver.py
chapters/ch10/: generate_telegraf_configs.yml  inventory.yml  requirements.txt
chapters/ch10-completed/: notes.md  pyproject.toml
chapters/ch10-completed/outputs/: ceos-02.conf
chapters/ch10-completed/templates/: docker-compose.yml.j2  output_file.j2  snmp_conf.j2  telegraf.conf.j2
chapters/ch10/telegraf/: telegraf.conf.toml.j2
chapters/ch12/: docker-compose.yml
chapters/ch12-completed/: docker-compose.yml  observer.py  retrieve_interface_metrics.py
chapters/ch13/: docker-compose.yml
chapters/ch13-completed/: docker-compose.yml  notes.md
chapters/ch13-completed/machine-learning/: machine-learning.Dockerfile
chapters/ch13/grafana/: datasources.yml
chapters/ch13/telegraf/: routing_collector.py
chapters/ch3-completed/: ch3.Dockerfile  docker-compose.yml  requirements.txt
chapters/ch3-completed/scripts/: bmp_play.py  ebpf_hello.py  gnmi_get_state.py  syslog_receiver.py  syslog_receiver_regex.py
chapters/ch5/: docker-compose.yml
chapters/ch5-completed/: docker-compose.yml
chapters/ch5-completed/telegraf/: script.py  telegraf-01.conf.toml
chapters/ch6/: docker-compose.yml
chapters/ch6-completed/: docker-compose.yml
chapters/ch6-completed/logstash/: logstash.cfg
chapters/ch6-completed/telegraf/: script.py
chapters/ch6/logstash/: logstash.cfg
chapters/ch6/telegraf/: script.py  telegraf.Dockerfile
chapters/ch7/: docker-compose.yml
chapters/ch7-completed/: docker-compose.yml
chapters/ch7-completed/loki/: loki-config.yml
chapters/ch7-completed/prometheus/: prometheus.yml
chapters/ch7/loki/: loki-config.yml
chapters/ch7/telegraf/: routing_collector.py  telegraf-02.conf.toml
chapters/ch8/: docker-compose.yml
chapters/ch8-completed/: docker-compose.yml
chapters/ch8/nautobot/: nautobot_config.py
chapters/ch9/: docker-compose.yml
chapters/ch9-completed/: docker-compose.yml
chapters/ch9-completed/loki/: loki-config.yml
chapters/ch9-completed/telegraf/: telegraf-02.conf.toml
chapters/ch9/loki/: loki-config.yml
chapters/skeleton/: docker-compose.yml
chapters/webinar/: docker-compose.yml  rca.py
chapters/webinar-completed/: README.md
chapters/webinar-completed/alertmanager/: alertmanager.yml
chapters/webinar-completed/logstash/: logstash.cfg
chapters/webinar-completed/telegraf/: telegraf.Dockerfile
chapters/webinar/containerlab/: lab.yml
chapters/webinar/loki/: loki-config.yml
chapters/webinar/telegraf/: telegraf-01.conf.toml  telegraf-02.conf.toml
chapters/webinar/webhook/: pyproject.toml
containerlab/: lab.yml  lab_vars.yml
containerlab/startups/: ceos-01.conf  ceos-02.conf
docs/: getting_ceos_installed.md
lab/: lab.yml
netobs/: common.py  containerlab.py  main.py
network_lab/: network_lab.yml
network_lab/startups/: ceos-01.conf  ceos-02.conf
obs_stack/: docker-compose.yml  example.env
obs_stack/batteries-included/: docker-compose.yml
obs_stack/ch10-completed/: ansible_generate_configs.yml  inventory.ini  notes.md
obs_stack/ch10-completed/outputs/: ceos-01.conf
obs_stack/ch10-completed/templates/: gnmi.j2  net_response.j2  output_prometheus.j2
obs_stack/ch12/: docker-compose.yml
obs_stack/ch12-completed/: docker-compose.yml  event-automation-old.py  event-automation.py  example1.py  example2.py  example3.py  observer.py  retrieve_bgp_metrics.py  retrieve_device_logs.py
obs_stack/ch12-completed/webhook/: pyproject.toml
obs_stack/ch12-completed/webhook/app/: api.py  config.py
obs_stack/ch13-completed/: docker-compose.yml  machine-learning.Dockerfile
obs_stack/ch13-completed/machine-learning/: pyproject.toml
obs_stack/ch13-completed/machine-learning/app/: anomaly.py  api.py  config.py  log.py  main.py  rca.py
obs_stack/ch13/machine-learning/: pyproject.toml
obs_stack/ch13/machine-learning/app/: anomaly.py  api.py
obs_stack/ch6/: docker-compose.yml
obs_stack/ch6-completed/: docker-compose.yml
obs_stack/ch7/: docker-compose.yml
obs_stack/ch7-completed/: docker-compose.yml
obs_stack/ch8/: docker-compose.yml
obs_stack/ch8-completed/: docker-compose.yml
obs_stack/ch9/: docker-compose.yml
obs_stack/ch9-completed/: docker-compose.yml
obs_stack/configs/alertmanager/: alertmanager.yml
obs_stack/configs/grafana/: datasources.yml
obs_stack/configs/logstash/: logstash.cfg
obs_stack/configs/loki/: loki-config.yml
obs_stack/configs/prometheus/: prometheus.yml
obs_stack/full/: docker-compose.yml
obs_stack/skeleton/: docker-compose.yml
setup/: README.md  create_droplet.yml  deploy_droplets.yml  destroy_droplet.yml  do_hosts.yaml  list_droplet.yml  setup_droplet.yml
setup/inventory/: do_hosts.yaml  localhost.yaml
terraform/: README.md  provider.tf  servers.tf  terraform.tfvars
webinar/: README.md
webinar/batteries-included/: README.md  docker-compose.yml  event-automation.py
(+103 files in other folders)
