[project]
name = "webhook"
version = "0.1.0"
description = "REST API Service that exposes a webhook endpoint for a Prefect Run"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'pydantic>=2.7.0',
    'pydantic-settings>=2.2.1',
    'fastapi>=0.99.1',
    'uvicorn',
    'toml',
    'prefect>=2.17.1',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.webhook]