[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "REST API Service that exposes a webhook endpoint for a Machine Learning service"
authors = ["Christian Adell <chadell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {version = "1.10.12", extras = ["dotenv"]}
fastapi = "0.99.1"
uvicorn = "*"
python-logging-loki = "*"
toml = "*"
openai = "1.2.4"
prometheus-api-client = "0.5.4"
prophet = "1.1.5"
plotly = "5.19.0"


[tool.machine-learning]
